Fixed popovers showing scrollbar when they didn't need it

--- a/src/content/common/Popover.css
+++ b/src/content/common/Popover.css
@@ -10,7 +10,7 @@
     transition: visibility 1s, opacity 1s, right 1s;
     padding: 20px;
     color: #D8D4F2;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .info-button {
